Adding the website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <header>
+    <!-- header section -->
+    <header> 
         <nav>
             <h1 class="nav-logo">Influencer Products</h1>
             <ul>
@@ -39,7 +40,7 @@
                     </g>
                 </svg>
 
-                <img src="/images/main-camera.png" alt="" srcset="">
+                <img src="./images/main-camera.png" alt="" srcset="">
             </div>
         </div>
         <!-- brand logo container -->
@@ -143,7 +144,7 @@
                 </div>
 
                 <!-- ebay -->
-                <div class="rakuten">
+                <div class="ebay">
                     <svg width="100" height="40" viewBox="0 0 100 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13.2837 8.64136C6.29281 8.64136 0.467285 11.5993 0.467285 20.5231C0.467285 27.5928 4.38453 32.0449 13.4642 32.0449C24.1515 32.0449 24.8366 25.0238 24.8366 25.0238H19.6581C19.6581 25.0238 18.5478 28.8044 13.1483 28.8044C8.75064 28.8044 5.58764 25.8416 5.58764 21.6889H25.3781V19.0829C25.3781 14.9745 22.763 8.64136 13.2837 8.64136V8.64136ZM13.1032 11.9719C17.2894 11.9719 20.1432 14.5295 20.1432 18.3628H5.70217C5.70217 14.2933 9.42719 11.9719 13.1032 11.9719V11.9719Z"
@@ -219,6 +220,7 @@
                 </div>
 
             </div>
+            <!-- horizontal line -->
             <svg class="hr-svg" xmlns="http://www.w3.org/2000/svg" width="1110" height="1" viewBox="0 0 1110 1"
                 fill="none">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1110 1H0V0H1110V1Z"
@@ -235,10 +237,106 @@
         </div>
     </header>
     <main>
-        <div class="main"></div>
+        <!-- Card Section -->
+        <section class="main-container">
+            <h1 class="collection-title">Popular Collection</h1>
+            <!-- card container -->
+            <div class="card-container">
+            <div class="card">
+                <img src="./images/tripod.png" alt="" srcset="">
+                <h1 class="name">Flex Tripod</h1>
+                <h1 class="price">$50.48</h1>
+                <p class="description">Worldwide Shifting <br> available. <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/mic.png" alt="" srcset="">
+                <h1 class="name">Microphone</h1>
+                <h1 class="price">$120.25</h1>
+                <p class="description">Worldwide Shifting <br>  available.<br> 
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/airpod.png" alt="" srcset="">
+                <h1 class="name">Airbuds</h1>
+                <h1 class="price">$100.00</h1>
+                <p class="description">Worldwide Shifting <br>  available.<br> 
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/drone.png" alt="" srcset="">
+                <h1 class="name">Drone</h1>
+                <h1 class="price">$980.25</h1>
+                <p class="description">Worldwide Shifting  <br> available.<br> 
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/lights.png" alt="" srcset="">
+                <h1 class="name">Light Setup</h1>
+                <h1 class="price">$1200.00</h1>
+                <p class="description">Worldwide Shifting <br>  available.<br> 
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/setup.png" alt="" srcset="">
+                <h1 class="name">Photoshoot Set</h1>
+                <h1 class="price">$820.40</h1>
+                <p class="description">Worldwide Shifting <br>  available.<br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/camera.png" alt="" srcset="">
+                <h1 class="name">Vlogging Camera</h1>
+                <h1 class="price">$1800..80</h1>
+                <p class="description">Worldwide Shifting <br> available.<br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/single-light.png" alt="" srcset="">
+                <h1 class="name">Green Screen</h1>
+                <h1 class="price">$25.48</h1>
+                <p class="description">Worldwide Shifting <br> available.<br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="" srcset="">
+                <h1 class="name">Action Camera</h1>
+                <h1 class="price">$380.00</h1>
+                <p class="description">Worldwide Shifting <br> available.<br>
+                    Buyers protection possible!
+                </p>
+            </div>
+        </div>
+        <p class="see-more"><a href="">See More</a></p>
+        </section>
+        <!-- feature section -->
+        <section class="feature-section">
+            <div class="feature-img">
+                <img src="./images/gear.png" alt="" srcset="">
+            </div>
+            <div class="feature-info">
+                <h1 class="feature-title">Featured products at one place</h1>
+                <p class="feature-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, sapiente eveniet quas cumque distinctio tempore esse sequi ullam excepturi, ea architecto, ut dolorum sed nesciunt? Velit.</p>
+                <button class="feature-btn">Join Now</button>
+            </div>
+        </section>
     </main>
+    <!-- Footer section -->
     <footer>
-
+        <div class="footer-content">
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="footer-description">
+                Copyright 2020 influencer products </p>
+               <p class="footer-description"> All rights reserved</p>
+        </div>
     </footer>
 </body>
 
